--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -7,7 +7,7 @@
   apt : name={{ item }} state=present install_recommends=false
 
   tags:
-    - database
+    - brain
     - consul
     - debian
 
@@ -18,7 +18,7 @@
   ufw : port={{ consul_http_port }} proto=tcp rule=allow
 
   tags:
-    - database
+    - brain
     - consul
     - debian
 
@@ -29,7 +29,7 @@
   ufw : port={{ consul_http_port }} proto=tcp rule=allow
 
   tags:
-    - database
+    - brain
     - consul
     - debian
 
@@ -40,7 +40,7 @@
   ufw : port={{ consul_https_port }} proto=tcp rule=allow
 
   tags:
-    - database
+    - brain
     - consul
     - debian
 
@@ -51,7 +51,7 @@
   ufw : port={{ consul_dns_port }} proto=tcp rule=allow
 
   tags:
-    - database
+    - brain
     - consul
     - debian
 
@@ -62,7 +62,7 @@
   ufw : port={{ consul_rpc_port }} proto=tcp rule=allow
 
   tags:
-    - database
+    - brain
     - consul
     - debian
 
@@ -73,7 +73,7 @@
   ufw : port={{ consul_server_port }} proto=tcp rule=allow
 
   tags:
-    - database
+    - brain
     - consul
     - debian
 
@@ -84,7 +84,7 @@
   ufw : port={{ consul_cluster_port }} proto=tcp rule=allow
 
   tags:
-    - database
+    - brain
     - consul
     - debian
 ###################################################################################################
