--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,7 @@
 ###################################################################################################
 
+dependencies:
+
+  - { role: common }
+
 ###################################################################################################
